--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -24,3 +24,8 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+td, th {
+  padding: 4px;
+  border: 1px solid black;
+}
